--- a/core/shared/styles/body.less
+++ b/core/shared/styles/body.less
@@ -5,6 +5,13 @@
 // variables
 @body-background-color: rgb(238, 238, 238);
 
+// used to place correctly all elements.
+*,
+*:before,
+*:after {
+  .border-box;
+}
+
 // We're acting as an app, so we should always fill the screen completely
 html,
 body {
