--- a/core/shared/styles/includes/variables.less
+++ b/core/shared/styles/includes/variables.less
@@ -118,14 +118,6 @@
 
 @icon-label-padding-multiplier: 0.25;
 
-// Text Field
-@textfield-border-color: rgba(0, 0, 0, 0.25);
-@textfield-background-color: rgb(255, 255, 255);
-
-@textfield-disabled-background-color: rgb(230, 230, 230);
-@textfield-error-border-color: rgb(204, 84, 74);
-@textfield-error-font-color: rgb(204, 84, 75);
-
 // Search Text Field
 @search-text-color: rgb(150, 150, 150);
 @search-text-background-color: rgb(249, 249, 249);
